[package]
name = "everygarf"
version = "3.0.0-alpha1"
edition = "2024"

[dependencies]
# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
# Async
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"
# Error handling
anyhow = "1.0.98"
# General
clap = { version = "4.5.41", features = ["derive"] }
reqwest = "0.12.22"
chrono = "0.4.41"
dirs-next = "2.0.0"
# Optional
image = { version = "0.25.6", optional = true }
notify-rust = { version = "4.11.7", optional = true }

[features]
filetype = ["image"]
notify = ["notify-rust"]
